<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Saving Tracker</string>
  <string name="add_expense">添加开销</string>
  <string name="add_income">添加收入</string>
  <string name="add">记账</string>
  <string name="report">报表</string>
  <string name="account">帐号</string>
  <string name="expense_amount">金额: </string>
  <string name="expense_amount_hint">请输入开销金额</string>
  <string name="expense_category">类别: </string>
  <string name="confirm">确认</string>
  <string name="view_expense">查看花销历史</string>
  <string name="view_daily_bar">查看每日走势</string>
  <string name="no_data_title">当前账本下没有记录</string>
  <string name="no_data_des">有花销后,可不要忘了记录下来</string>
  <string name="expense_report">花销报表</string>
  <string name="user_center">个人中心</string>
  <string name="message_center">消息中心</string>
  <string name="search_user">查找用户</string>
  <string name="invite_friend">邀请添加好友</string>
  <string name="add_friend_invitation_sent">好友申请已发出</string>
  <string name="add_friend_succ">添加好友成功</string>
  <string name="add_friend_fail">添加好友被拒绝</string>
  <string name="accept_invitation">接受邀请</string>
  <string name="reject_invitation">拒绝邀请</string>
  <string name="reject_invitation_succ">拒绝成功</string>
  <string name="receive_add_friend_invitation">收到添加好友的申请,来自: %s</string>
  <string name="email">邮箱</string>
  <string name="password">密码</string>
  <string name="re_enter_password">再次输入密码</string>
  <string name="name">用户名</string>
  <string name="login">登录</string>
  <string name="logout">登出</string>
  <string name="sign_up">用户注册</string>
  <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
  <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
  <string name="register_success">注册成功</string>
  <string name="network_error">网络错误，请检查您的网络连接</string>
  <string name="add_account">增加账本</string>
  <string name="account_book_name">账本名</string>
  <string name="account_book_des">账本描述</string>
  <string name="selected_account_book">当前选择账本: %s</string>
  <string name="select_account_book">选择账本</string>
  <string name="share_account_book">分享账本</string>
  <string name="friend_list">好友列表</string>
  <string name="share_succ">分享成功</string>
</resources>
