<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:hint="@string/email"
      ></EditText>

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      />

  <EditText
      android:id="@+id/password_confirm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif"
      android:hint="@string/re_enter_password"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      />

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:layout_marginTop="8dp"
      android:hint="@string/name"
      android:inputType="textEmailAddress"
      />

  <Button
      android:id="@+id/sign_up"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:text="@string/sign_up"
      />

</LinearLayout>
