<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

  <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:hint="@string/account_book_name"
      />

  <EditText
      android:id="@+id/description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginEditText"
      android:layout_marginTop="8dp"
      android:fontFamily="sans-serif"
      android:hint="@string/account_book_des"
      android:selectAllOnFocus="true"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      >

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:text="@string/confirm"
        />
  </LinearLayout>

</LinearLayout>
