<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clickable="true"
      android:focusableInTouchMode="true"
      >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:text="@string/expense_amount"
          style="@style/ColumnTitle"
          />

      <EditText
          android:id="@+id/expense_amount_et"
          android:hint="@string/expense_amount_hint"
          android:inputType="numberDecimal"
          android:digits="0123456789."
          style="@style/ColumnEdit"
          />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:text="@string/expense_category"
          style="@style/ColumnTitle"
          />

      <Spinner
          android:id="@+id/expense_category_sp"
          style="@style/ColumnEdit"
          />
    </LinearLayout>

    <TextView
        android:id="@+id/account_book"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical|left"
        tools:text="选择账本"
        />

    <Button
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        />

  </LinearLayout>

</ScrollView>
